--- a/index.html
+++ b/index.html
@@ -24,7 +24,25 @@
       </ul>
     </nav>
   </header>
-  <main></main>
+  <main>
+<!-- hero start -->
+
+  <section class="hero">
+    <section class="hero-info">
+      <h1> 
+        Comida casera, <span class="hero-info-block">saludable y</span> <span class="vegana">vegana</span>.
+      </h1>
+      <section id="hero-buttons">
+        <button>Ver Menu</button>
+        <button>Local Cerca</button>
+      </section>
+      <img src="img/heroIcons.png" alt="icons">
+    </section>
+    <img id="hero-image" src="img/koreanDish.png" alt="food image">  
+  </section>
+
+<!-- hero end -->
+  </main>
   <footer></footer>
 </body>
 </html>
